kate: forward return code from setting src pad caps

https://bugzilla.gnome.org/show_bug.cgi?id=659606